tests/paczka1/small_fuzzy/18222249.err
Error in line 1: PtcT16kevNL A70 17,2
Error in line 7: gDB A404 59,2
